changed design to add functionality
added skeleton loading font
removed some elements that were just for designing purposes

--- a/HiveHarmony/App.xaml
+++ b/HiveHarmony/App.xaml
@@ -7,12 +7,17 @@
     <Application.Resources>
 
         <ResourceDictionary>
+
+            <FontFamily x:Key="FlowCircularRegular">Fonts/#Flow Circular Regular</FontFamily>
+
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary>
                     <ResourceDictionary.MergedDictionaries>
                         <ResourceDictionary Source="Themes/DarkModeColors.xaml" />
                     </ResourceDictionary.MergedDictionaries>
                 </ResourceDictionary>
+
+                <ResourceDictionary Source="Themes/Consts.xaml" />
 
                 <ResourceDictionary Source="Styles/HexButton.xaml" />
                 <ResourceDictionary Source="Styles/Checkbox.xaml" />
