--- a/HiveHarmony/App.xaml
+++ b/HiveHarmony/App.xaml
@@ -7,6 +7,9 @@
     <Application.Resources>
 
         <ResourceDictionary>
+            <Style TargetType="{x:Type Window}">
+                <Setter Property="FontFamily" Value="Tahoma" />
+            </Style>
 
             <FontFamily x:Key="FlowCircularRegular">Fonts/#Flow Circular Regular</FontFamily>
 
