--- a/HiveHarmony/MainWindow.xaml
+++ b/HiveHarmony/MainWindow.xaml
@@ -120,13 +120,13 @@
 
 
             <!--  Toolbar  -->
-            <Grid Grid.ColumnSpan="3">
+            <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition Width="135px" />
                 </Grid.ColumnDefinitions>
 
-                <Rectangle Grid.ColumnSpan="2" MouseDown="Rectangle_MouseDown">
+                <Rectangle Grid.Column="0" Grid.ColumnSpan="2" MouseDown="Rectangle_MouseDown">
                     <Rectangle.Fill>
                         <LinearGradientBrush>
                             <GradientStop Offset=".5" Color="Transparent" />
@@ -190,7 +190,7 @@
             </Grid>
 
             <!--  Left Sidebar  -->
-            <Grid Grid.RowSpan="2">
+            <Grid Grid.Row="0" Grid.Column="0"  Grid.RowSpan="2">
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition />
@@ -199,7 +199,6 @@
 
                 <Button Grid.Row="0" Style="{DynamicResource HexButtonTheme}">
                     <Path
-                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                         Margin="25"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
@@ -212,7 +211,6 @@
                 </Button>
                 <Button Grid.Row="1" Style="{DynamicResource HexButtonTheme}">
                     <Path
-                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                         Margin="25"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
@@ -242,7 +240,6 @@
                 </Button>
                 <Button Grid.Row="2" Style="{DynamicResource HexButtonTheme}">
                     <Path
-                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                         Margin="25"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
@@ -318,6 +315,7 @@
                                         Sport
                                     </CheckBox>
                                     <WrapPanel
+                                        Grid.Column="0"
                                         Margin="100,0,0,0"
                                         HorizontalAlignment="Left"
                                         VerticalAlignment="Center">
@@ -336,8 +334,9 @@
 
 
                 <!--  To-do's  -->
-                <Border
+                <Border 
                     Grid.Row="1"
+                    Grid.Column="0"
                     Margin="10"
                     Background="{DynamicResource scb_Back_Primary_LowMid}"
                     CornerRadius="{StaticResource CornerRadius_Medium}">
@@ -362,7 +361,6 @@
                             </TextBlock>
                         </Border>
 
-
                         <TextBlock
                             Name="TodoListTextBlock"
                             Margin="10,0"
@@ -376,15 +374,15 @@
                             Todolistthings<LineBreak />
                             someplaceholderbla<LineBreak />
                             some more text<LineBreak />
-                            andsomemore<LineBreak />
+                            and some more<LineBreak />
                         </TextBlock>
                     </StackPanel>
                 </Border>
-
-
+                
                 <Border
-                    Grid.RowSpan="2"
+                    Grid.Row="0"
                     Grid.Column="1"
+                    Grid.RowSpan="2"
                     Margin="10"
                     Background="{DynamicResource scb_Back_Primary_LowMid}"
                     CornerRadius="{StaticResource CornerRadius_Medium}">
@@ -441,6 +439,7 @@
                                     </TextBlock>
                                     <Border
                                         Grid.Row="1"
+                                        Grid.Column="0"
                                         Padding="5"
                                         Background="LightSkyBlue"
                                         CornerRadius="{StaticResource CornerRadius_Medium}">
@@ -457,8 +456,9 @@
                                     </Border>
 
                                     <StackPanel
-                                        Grid.RowSpan="2"
+                                        Grid.Row="0"
                                         Grid.Column="1"
+                                        Grid.RowSpan="2"
                                         Margin="10"
                                         Orientation="Horizontal">
 
@@ -480,14 +480,11 @@
                                                 Stretch="UniformToFill" />
                                         </Grid>
                                     </StackPanel>
-
                                 </Grid>
                             </Border>
                         </StackPanel>
                     </Grid>
                 </Border>
-
-
             </Grid>
 
             <!--  Right Sidebar (Kalender)  -->
@@ -532,7 +529,6 @@
                     </hex:HexGrid.Resources>
 
                     <hex:HexItem
-                        Grid.Column="0"
                         Margin="2"
                         Background="{DynamicResource scb_Back_Primary_LowMid}"
                         BorderThickness="0"
@@ -593,7 +589,6 @@
                         Stretch="UniformToFill" />
                 </WrapPanel>
             </Grid>
-
         </Grid>
     </Border>
 </Window>
