--- a/HiveHarmony/MainWindow.xaml
+++ b/HiveHarmony/MainWindow.xaml
@@ -252,7 +252,7 @@
                 </Button>
             </Grid>
 
-            <!--  Center Content  -->
+            <!--  Center Content (Calendar)  -->
             <Grid
                 Grid.Row="1"
                 Grid.Column="1"
@@ -305,11 +305,13 @@
                                         <ColumnDefinition Width="84*" />
                                     </Grid.ColumnDefinitions>
                                     <CheckBox
+                                        Padding="0,5"
                                         HorizontalAlignment="Left"
                                         VerticalAlignment="Center"
                                         FontFamily="{DynamicResource FlowCircularRegular}"
                                         FontSize="20"
                                         FontWeight="Bold"
+                                        Foreground="{DynamicResource scb_Text_Low}"
                                         IsChecked="True"
                                         Style="{DynamicResource CheckBoxTheme}">
                                         Sport
@@ -331,7 +333,6 @@
                         </StackPanel>
                     </Grid>
                 </Border>
-
 
                 <!--  To-do's  -->
                 <Border 
@@ -378,7 +379,8 @@
                         </TextBlock>
                     </StackPanel>
                 </Border>
-                
+
+                <!--  Weekday Appointments  -->
                 <Border
                     Grid.Row="0"
                     Grid.Column="1"
@@ -402,7 +404,7 @@
                                 Margin="5"
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Center"
-                                FontSize="20"
+                                FontSize="26"
                                 FontWeight="Bold"
                                 Foreground="{DynamicResource scb_Text_Low}"
                                 TextAlignment="Left"
@@ -411,12 +413,13 @@
                             </TextBlock>
                         </Border>
 
-                        <StackPanel Margin="5,125,5,5">
+                        <StackPanel Name="AppointmentsPanel" Margin="5,125,5,5">
                             <Border
                                 Margin="0,0,0,5"
                                 Padding="5"
                                 Background="LightBlue"
-                                CornerRadius="{StaticResource CornerRadius_Medium}">
+                                CornerRadius="{StaticResource CornerRadius_Medium}"
+                                Visibility="Collapsed">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="100" />
@@ -465,11 +468,12 @@
                                         <Grid
                                             Margin="2,0"
                                             HorizontalAlignment="Left"
-                                            VerticalAlignment="Center">
+                                            VerticalAlignment="Center"
+                                            Visibility="Collapsed">
                                             <Image
                                                 Width="40"
                                                 Height="40"
-                                                Source="https://api.suhri.de/user/picture/44/128.png" />
+                                                Source="https://api.suhri.de/user/picture/59/128.png" />
                                             <Path
                                                 Height="25"
                                                 Margin="0,0,0,-10"
@@ -477,7 +481,8 @@
                                                 VerticalAlignment="Bottom"
                                                 Data="F1 M 1 4 L 3 6 L 9 0 L 10 1 L 3 8 L 0 5 Z"
                                                 Fill="LawnGreen"
-                                                Stretch="UniformToFill" />
+                                                Stretch="UniformToFill"
+                                                Visibility="Collapsed" />
                                         </Grid>
                                     </StackPanel>
                                 </Grid>
@@ -485,6 +490,81 @@
                         </StackPanel>
                     </Grid>
                 </Border>
+            </Grid>
+
+            <!--  Center Content (Groups)  -->
+            <Grid
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="25"
+                Visibility="Collapsed">
+
+                <!--  Gruppen  -->
+                <Border
+                    Margin="10"
+                    Background="{DynamicResource scb_Back_Primary_LowMid}"
+                    CornerRadius="{StaticResource CornerRadius_Medium}">
+                    <Border.Effect>
+                        <DropShadowEffect />
+                    </Border.Effect>
+                    <Grid>
+                        <Border
+                            Height="40"
+                            Margin="10"
+                            VerticalAlignment="Top"
+                            Background="{DynamicResource scb_Back_Primary_High}"
+                            CornerRadius="{StaticResource CornerRadius_Medium}">
+                            <TextBlock
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                FontSize="25"
+                                FontWeight="Bold"
+                                Foreground="{DynamicResource scb_Text_Low}"
+                                TextAlignment="Center">
+                                Gruppen
+                            </TextBlock>
+                        </Border>
+
+                        <StackPanel Margin="0,55,0,0">
+                            <Border
+                                Margin="10,5"
+                                Padding="10,20"
+                                Background="{DynamicResource scb_Back_Primary_HighMid}"
+                                CornerRadius="{StaticResource CornerRadius_Medium}"
+                                Visibility="Collapsed">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="163*" />
+                                        <ColumnDefinition Width="84*" />
+                                    </Grid.ColumnDefinitions>
+                                    <CheckBox
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        FontFamily="{DynamicResource FlowCircularRegular}"
+                                        FontSize="20"
+                                        FontWeight="Bold"
+                                        IsChecked="True"
+                                        Style="{DynamicResource CheckBoxTheme}">
+                                        Sport
+                                    </CheckBox>
+                                    <WrapPanel
+                                        Margin="100,0,0,0"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center">
+                                        <Image
+                                            Width="25"
+                                            Height="25"
+                                            Margin="1"
+                                            Source="https://api.suhri.de/user/picture/3/128.png"
+                                            Visibility="Collapsed" />
+                                    </WrapPanel>
+                                </Grid>
+                            </Border>
+                        </StackPanel>
+                    </Grid>
+                </Border>
+
+
             </Grid>
 
             <!--  Right Sidebar (Kalender)  -->
